# ChangeLog for dev-libs/libatomic_ops
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libatomic_ops/ChangeLog,v 1.45 2013/12/25 05:42:13 radhermit Exp $

  25 Dec 2013; Tim Harder <radhermit@gentoo.org> libatomic_ops-7.4.0.ebuild:
  Fix prefixed docs installation (bug #495262).

*libatomic_ops-7.4.0 (12 Dec 2013)

  12 Dec 2013; Tim Harder <radhermit@gentoo.org> +libatomic_ops-7.4.0.ebuild,
  +files/libatomic_ops-7.4.0-docs.patch:
  Version bump (bug #493964).

  28 Feb 2013; Jeroen Roovers <jer@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for HPPA (bug #454048).

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for sh, wrt bug #454048

  06 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for sparc, wrt bug #454048

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for alpha, wrt bug #454048

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for arm, wrt bug #454048

  31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for ppc, wrt bug #454048

  31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for ppc64, wrt bug #454048

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for x86, wrt bug #454048

  29 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libatomic_ops-7.2d.ebuild:
  Stable for ia64, wrt bug #454048

  28 Jan 2013; Chema Alonso <nimiux@gentoo.org> libatomic_ops-7.2d.ebuild:
  Marked stable for amd64 wrt bug #454048

  27 Jan 2013; Alexis Ballier <aballier@gentoo.org> libatomic_ops-7.2d.ebuild:
  keyword ~amd64-fbsd

  16 Dec 2012; Ulrich Müller <ulm@gentoo.org> libatomic_ops-1.1.ebuild,
  libatomic_ops-1.2.ebuild, libatomic_ops-1.2-r1.ebuild,
  libatomic_ops-7.2_alpha4.ebuild, libatomic_ops-7.2_alpha6.ebuild,
  libatomic_ops-7.2d.ebuild: