@@ -15,6 +15,7 @@ DIST gc-7.2d.tar.gz 1263064 SHA256 d9fe0ae8650d43746a48bfb394cab01a319f3809cee19
 DIST libatomic_ops-1.1.tar.gz 178581 SHA256 f5fb0d89b5b26a7f0bb00c92463aeb62a425c491391bc7e36660a1ac0b5a1f13 SHA512 888efe425ee5e6a8008eb047dcb6db6577af73705a172010f1ef413510dfe8127977b37fe18a54be528ed3a0f0b1a7edc5e2ecc147fd6d9d3a7fe5ecaa9a1253 WHIRLPOOL c5c3c059f039de663965d030af3bd6c87e4fadd49b9a2740a96522f0ab68cefc6c39cf980fdd1d7d5b2aa2719172e13f8a122d3b77eb3eabd86ede15494c9f97
 DIST libatomic_ops-1.2.tar.gz 183780 SHA256 a3d8768aa8fd2f6ae79be2d756b3a6b48816b3889ae906be3d5ffb2de5a5c781 SHA512 b3eb524b900f3da46730b4b158e73897f0443269b78ea429812d91f1468d17cccbf15dfd522301724049fe73aced38bf1567aff7b680795da392760890ed83bf WHIRLPOOL 3d9887d167895d7f4c1066eb0fe4c09d2c3ce4852ad84e38a190cc92ef877fd060ef7f235a7470ca1da3bb58c02d5eb2dcfd2115c1c238c27265df844bb27673
 DIST libatomic_ops-7.4.0.tar.gz 455143 SHA256 2875ccc29254d3375dab9c5930c42df342f148f8cd7c646621dbf03f8c1d5b5a SHA512 3a2f6eac7c5f0fe0abaf8650047b8ec1c9c5abe732982a294a2afa920b588e17d64cb9f05a44be31b8cca9e52cc5ac79a26e1779bf60169c228344df4bbe86a9 WHIRLPOOL 32f213bddb235dc0657655d5320262a033d6f54a911077edddfa2d1c4f58568cd1e503cb2a305c0d3538c2c5d306efc4ac5d56f0fed510e6694883f093300e6b
+DIST libatomic_ops-7_4_2.tar.gz 115132 SHA256 2616be0a2f70f7e3eb12f131a36e32723ed5a1928f17b886c3e7c62f7ed14339 SHA512 3d06d5de930a369dd2af4413d8f573993eb927b45941ae8eba14ada91abd34a6baf31e1030d1ef6aa02bd6a2d8d59f9f306dd8dda6a68cf552a2745041111b2e WHIRLPOOL b2b90458b8bbc2660461c64f018c514652132cf65f7afd6a3719cd62fda95304523beff1ca4cab97cf730e25e3881bbaa3dc1e9b461a447b1956818c858b30ad
 EBUILD libatomic_ops-1.1.ebuild 617 SHA256 570f5fe7a8148fb28b40c08612ad487e655cef39415c6f6a5f10ff6f90c0f857 SHA512 2091840c4715e81211a3975de575802eb9f32122db45b434ee5a85139c575d93c3904bcb232aa652f504ac1869a33f1ae5e6e0e71894a0e72370546bf253a334 WHIRLPOOL b51d2e0f2bf96a0d0835f41aae5b1d54af567cd7bd222e3f7e3320c6c7000d62f299824523c8c37d127decc01eb6cc4812432df3a7415becf6e725218eb0ce7b
 EBUILD libatomic_ops-1.2-r1.ebuild 1074 SHA256 ec6915d4993493e630b45dcd61a62fbcbf6938e8568decb149aa106cdcb71321 SHA512 7baec98ddb0e69e9cf92da9cbe1848b321b12dd9c94ab278686fd78b8d12d550eedf40527e28839162934e93e66aa576e5a75633020b3776867d851505113b35 WHIRLPOOL 8c2d1cf72f3c674ff1c16d3f413d42e70fb560f8635cb1b024c362fe14b82d83e1413844b4dfb19d405872e73efaa1060302c4049a37d24c63aa7a237828c2b1
 EBUILD libatomic_ops-1.2.ebuild 780 SHA256 5ea54bcd3bcb43c0de31e05fa43f7e8a9371331e2b1ed26745843119c1fe6206 SHA512 4183e429f57cd341e52529b963833a4b0174f34e79baa0d8db099880d3938accbc314c8c85f35348dd6bd9cd1113ee5ee8b63190ea6785fcc268ccb9e1215403 WHIRLPOOL 9ba397f80ed3a2f89459fcccfe02620504b358170b19a78fb29abeae13e5adace76014a101ae35a0f9c01f8faa29c58d4dca9598be07db6860ae39e4888649e2
@@ -22,16 +23,17 @@ EBUILD libatomic_ops-7.2_alpha4.ebuild 1091 SHA256 3de55af9467bd05bcaa7ec1be70ac
 EBUILD libatomic_ops-7.2_alpha6.ebuild 1077 SHA256 d5d8d1e065b9debac36a5f8f48810f3ba7f8d788fa837732eb38e04cb28538d1 SHA512 aac6c26717737f7fa08780b3222a7ad8bac379d4bc66b863399fef0ffd2149ca3b51a91acb358dc20306453920f9afed06828d058751e9532626afbb2c025d61 WHIRLPOOL 7f0da63abc60a2d2a253643f9041e2eeb407fc724f4e404e864c0133a094a4c9ff0e731184833a00b0d0bdcd1cd0fa52da4520b3622499b9859edb4e612cabfe
 EBUILD libatomic_ops-7.2d.ebuild 1041 SHA256 4d86cc690567a3b666cba979cf9e3240a276f2d7467d3134306f54eff94bb037 SHA512 6284dee5db22d2da2150b382225518a114831e9b654ad30b247c00ab5f6a39d459bbda4879be53a9d0ffee9afb10f9859c7d17a2b1547c79921137af6ac6a201 WHIRLPOOL 8eddd52b82f01ff5b4dc759b4ab7407ef351a8139408b709e1aa8e703542977c06e0d2b22e26bd4774f7396a7f81226063e7477791598910068c1533321738da
 EBUILD libatomic_ops-7.4.0.ebuild 886 SHA256 ed86f740c1e70933cf4b8dc9b75ca254c494365fdca60b3412e41137ba5ec598 SHA512 e20eb6f2e9e35c92eefd5519552cc16157bbe665cf207d3c232d1543cb7bc4dc69a47ce97e7b0fbe907a225cbd39e73e3a64fbbaf0e40056c73303f46f1af598 WHIRLPOOL 41b127ccaf0f2cbbdfcd30cae6cf2301bee804dea373ac81791cfa62eda4f1019baeb00b6fc1e94c75d9ec81e0853b4d444725d93d6821d3f19676e4f74d590b
-MISC ChangeLog 6257 SHA256 6a7746c95326e3f6b46da59ca157c0827265183f73006ad3fb714e8504d150ae SHA512 2ac903b8ccf8e48233dc3422b19c071136bf02c58e778cc1bdc81d645a9cc664ff9d2aa5ea1c0d07f1dad243447a9540b05c837888b6b7de8f123239a75de1e7 WHIRLPOOL 45e9e4123a48e469f91094fe37f29cd92e14ca54ef8af2e7be3240fec4130746e354c5216a3cc969eeb6ef335d19807f3facace0dba0e2b3d4b2a20a4717399e
+EBUILD libatomic_ops-7.4.2.ebuild 919 SHA256 cca9b720e929b4b9c6458853000705c22881a49f14c211c8a40e896c0c89f85d SHA512 69044c2122ea3c6c7930a6a087fe0cd84083eb280c703ddb64523df84a45d0b01f7b8a277871125ed35a91836d671c5138165a7559c5b72481f1313af530b215 WHIRLPOOL 5781bf0dc7ea0b517dac431f9c3f1d4404d23d189feb159a018b323dc9852165d810fc2d090c5f042485cf315ee953ba72195659e9c24289138b3daccf4ef764
+MISC ChangeLog 6388 SHA256 76cf104d8973a23408e7bb0d5bb137b715c0744165ab210a48290515d2f58342 SHA512 12223a7747255476bc6cf50cbc949a7b672d9441bcfc2db7fafd70d6a17cbe8e9dafa9179940c84802201f18d0f38b1d3c6faa50fff2cf2d4253b62ae3e14e5d WHIRLPOOL c67197754cc7bcaa28104d9f9c617780fd1c27c6e5139c18d9bae94a05278dcd791d76c0fe813ef71c70b8806fbd451c4559dd5c2a0d53d5f041cab511a9e1e8
 MISC metadata.xml 158 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b SHA512 90f74979d228a35f81de50665ead63d228bc4f0d11f3def4832c9607f4242cbc4562db0a123bdcf2c4b6e0be78fc5565a65f75cdb53ed4c8d45544ebf74255dc WHIRLPOOL a90483bd4fa01ed5fa21bfe9f59c11b97c793146e3031eae342a3355c6dc2e4ef2b356af0bf711b5e16e16551c91d63ecdbb48e708df606017264e8bff5e9fe9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJSunA5AAoJEEqz6FtPBkyjSuIIALaBKVXrYy0DmOzWljUpRfpf
-OPkqLO9N8HC1Zz7uwTGlE0wIqNH21H+JUnyc9tGzOwMzH+hfgHQX07IzzvVjNjwn
-45ysYiBRZ+KpTDRfqXnmYFBYerPVRPP/e7cZ7VIqNgzXl/cK9Bx3Aq7KXuCt4BDF
-pDLq1rn1orc4dZ1IpCZut0ygQ0y2tv6eg51E0hpcq8SYeXZCet5IenZI81bzSazm
-JZFHaW3NP+OA+RmryA6wYh8aJU0HzQ85XpvlOxYzYAWqQJFhtda9XjoQGp1zRmHs
-YpYg774k/Rd70QH5nBGaErzC/kMIq08AKvu/toQOWgqsAr2xBR2KGAdvWdy+Tok=
-=OdJm
+iQEcBAEBCAAGBQJU3k3ZAAoJEEqz6FtPBkyjk1UH/iHsp7DjsXk1m7wrF2L2KSZC
+lQhbGpEVXqGMSifeaHf4jaOKLq77EzB6RfRW/FRGuflOfWCeY/QxOqzRxE3/J19S
+YV6MzPri5bl8tshNrhDhS7/s53BzUFsEbsPz0vkr+n+njb22HzvyJEVh0ZCSZ0ue
+hg4EzrXKczll5eMsgkoD9evssPWoZ9jSgMydc4VPsar7Q97E4VwnoafoLXE0I0rQ
+VErsh+n5J6Ajx1V2vpff7IsCdjTZTxBD8tddE4IYtKacdydyLND9XgD3wcTBah37
+a65isn9K5St7pwGEYyXVQxYd3VJTwP+377QLS2nHcrvVviB2rYSF5PbP6qTQwTI=
+=Q1GX
 -----END PGP SIGNATURE-----
