@@ -1,0 +1,27 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libatomic_ops/libatomic_ops-7.4.2.ebuild,v 1.1 2015/02/13 19:17:33 radhermit Exp $
+
+EAPI=5
+inherit autotools eutils
+
+MY_P=${PN}-${PV//./_}
+DESCRIPTION="Implementation for atomic memory update operations"
+HOMEPAGE="https://github.com/ivmai/libatomic_ops/"
+SRC_URI="https://github.com/ivmai/${PN}/archive/${MY_P}.tar.gz"
+
+LICENSE="MIT boehm-gc GPL-2+"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+S=${WORKDIR}/${PN}-${MY_P}
+
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-7.4.0-docs.patch
+	eautoreconf
+}
+
+src_configure() {
+	econf --docdir="${EPREFIX}"/usr/share/doc/${PF}
+}
