@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libatomic_ops
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libatomic_ops/ChangeLog,v 1.45 2013/12/25 05:42:13 radhermit Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libatomic_ops/ChangeLog,v 1.46 2015/02/13 19:17:33 radhermit Exp $
+
+*libatomic_ops-7.4.2 (13 Feb 2015)
+
+  13 Feb 2015; Tim Harder <radhermit@gentoo.org> +libatomic_ops-7.4.2.ebuild:
+  Version bump.
 
   25 Dec 2013; Tim Harder <radhermit@gentoo.org> libatomic_ops-7.4.0.ebuild:
   Fix prefixed docs installation (bug #495262).
